[gd_scene load_steps=3 format=2]

[ext_resource path="res://Items/GroundPiece.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 16 )

[node name="GroundPiece" type="RigidBody2D"]
mode = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 32, 0 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 64, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -8, -32 )
rect = Rect2( -8, 16, 96, 32 )
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
